--- a/vignettes/adaptivetau.tex
+++ b/vignettes/adaptivetau.tex
@@ -19,23 +19,23 @@
 
 \section*{Introduction}
 
-Fundamentally, stochastic effects become critical to take into account when the quantities involved in a system are small enough that extinction becomes probable.  This vignette presents three such biological systems:
+Fundamentally, stochastic effects become critical to take into account when the quantities in a system are small enough that extinction becomes probable.  This vignette presents three such biological systems:
 \begin{enumerate}
   \item (ecology) Lotka-Volterra predator-prey dynamics predict oscillations in the population sizes of predator and prey species for certain parameters \citep{Lot20}.  However, when the population of either species nears zero, chance effects can lead to extinction of that species and thus a halt to the oscillations.
-  \item (evolution) When a new mutation arises in a population of size $N$, it will eventually fix at a frequency of 0 or 1.   If the allele is selectively neutral, then with probability $(N-1)/N$, the stochastic process of genetic drift will lead to the new allele disappearing from the population instead of reaching fixation \citep{Kim57}.
-  \item (epidemiology) In general, emerging zoonotic infectious are poorly adapted to humans and thus unlikely to be transmitted from the initial infection to many more humans.  However, continued contact between humans and the animal reservoir will give it a chance to become human adapted, leading to a larger epidemic \citep{LGP+09}.
+  \item (evolution) When a new mutation arises in a population of size $N$, it will eventually be either lost (reaching 0\% frequency) or fix (reaching 100\% frequency).   If the allele is selectively neutral, then with probability $(N-1)/N$, the stochastic process of genetic drift will lead to the new allele disappearing from the population instead of reaching fixation \citep{Kim57}.
+  \item (epidemiology) In general, emerging zoonotic infections are poorly adapted to humans and thus unlikely to be transmitted from the initial infected person to significantly more people.  However, continued contact between humans and an animal reservoir will give the pathogen more chances to become human adapted, leading to a larger epidemic \citep{LGP+09}.
 \end{enumerate}
 Crucially, these stochastic processes are all Markovian --- the future state of the process, conditional on the present state, is independent of the past.
 
-Here, we focus on simulating trajectories from continuous-time Markov process for which the transition rates are not a function of time (i.e.\ time-homogeneous).  The straightforward (and exact) method of simulating such a process requires requires many iterations of 1) drawing a random ex\-po\-nen\-tial\-ly-dis\-tri\-buted waiting time until the next transition and 2) randomly selecting the identity of the transition, weighted by their relative transition rates.  This solution, which is known as the Gillespie algorithm in the chemical physics literature \citep{Gil76}, becomes impractical as any one transition rate grows large.  Instead, models
+Here, we focus on simulating trajectories from a continuous-time Markov process for which the transition rates are not a function of time (i.e.\ time-homogeneous).  The straightforward (and exact) method of simulating such a process requires many iterations of 1) drawing a random ex\-po\-nen\-tial\-ly-dis\-tri\-buted waiting time until the next transition and 2) randomly selecting the identity of the transition, weighted by the relative transition rates.  This solution, which is known as the Gillespie algorithm in the chemical physics literature \citep{Gil76}, becomes impractical as any one transition rate grows large.  Instead, models
 with larger transition rates require an approximate approach that increases simulation speed while still maintaining reasonable accuracy.  One way to perform this approximation is to reduce the number of iterations by treating transition rates as constant over time periods for which this approximation leads to little error.
 
-The \texttt{adaptivetau} R package implements both an exact solution and an approximate solution known as the ``adaptive tau-leaping algorithm'' \citet{CGP07}.  Similar functionality exists in the publicly-available \texttt{GillespieSSA} R package \citep{Pin08}; however, our new implementation is much faster, due to an underlying implementation in C++.
+The \texttt{adaptivetau} package in R implements both an exact solution and an approximate solution known as the ``adaptive tau-leaping algorithm'' \citep{CGP07}.  Similar functionality exists in the publicly-available \texttt{GillespieSSA} R package \citep{Pin08}; however, our new implementation is much faster, due in part to its underlying implementation in C++.
 
 
 \section*{Methods}
 
-\emph{IMPORTANT: This section can be skipped if you just want to ``run it,'' but the approximations involved in the adaptive tau-leaping algorithm should be understood before interpreting simulation results!}
+\emph{IMPORTANT: This section can be skipped if you just want to learn to use the package, but the approximations involved in the adaptive tau-leaping algorithm should be understood before interpreting simulation results!}
 
 First we define our notation and use it to describe the type of model simulated by this package. Then we provide basic intuition for the adaptive tau-leaping algorithm, leaving a more detailed description to \citet{CGP07}.
 
@@ -89,71 +89,71 @@ Next we write a function to calculate the rates of each transition ($\lambda$):
 Finally we run the simulations setting initial conditions (\texttt{init.values}), parameters (\texttt{params}), and the simulation stop time (\texttt{tf}):
 \begin{Schunk}
 \begin{Sinput}
-> set.seed(1) # set random number generator seed to be reproducible
-> simResults = ssa.adaptivetau(init.values = c(prey = 1000, pred = 1000),
+> set.seed(4) # set random number generator seed to be reproducible
+> simResults = ssa.adaptivetau(init.values = c(prey = 1000, pred = 500),
 +                              transitions, lvRateF,
 +                              params = list(r=10, beta=0.01, delta=10),
-+                              tf=10)
++                              tf=12)
 \end{Sinput}
 \end{Schunk}
 We plot the results in Figure \ref{fig-lv} using the following code:
 \begin{Schunk}
 \begin{Sinput}
 > matplot(simResults[,"time"], simResults[,c("prey","pred")], type='l',
-+         xlab='Time', ylab='Counts')
-> legend("topleft", legend=c("prey", "predator"), lty=1:2, col=1:2)
++         xlab='Time', ylab='Counts (log scale)', log='y')
+> legend("bottomleft", legend=c("prey", "predator"), lty=1:2, col=1:2)
 \end{Sinput}
 \end{Schunk}
 
 \begin{figure}
   \centerline{
 \includegraphics{adaptivetau-007}
-}\caption{\label{fig-lv} Trajectory from Lotka-Voltera model under adaptive tau-leaping approximation.}
+}\caption{\label{fig-lv} Simulated trajectory from the Lotka-Voltera model under the adaptive tau-leaping approximation.}
 \end{figure}
 
 \subsection*{Exact vs approximate algorithms}
 The above code uses the adaptive tau-leaping approximation for simulation.  An exact simulation requires more computational time, but captures more fine-scale variance, as you can see by running another simulation using the \texttt{ssa.exact} command:
 \begin{Schunk}
 \begin{Sinput}
-> simResults = ssa.exact(init.values = c(prey = 1000, pred = 1000),
-+                              transitions, lvRates,
-+                              params = list(r=10, beta=0.01, delta=10),
-+                              tf=10)
+> simResults = ssa.exact(init.values = c(prey = 1000, pred = 500),
++                        transitions, lvRates,
++                        params = list(r=10, beta=0.01, delta=10),
++                        tf=12)
 \end{Sinput}
 \end{Schunk}
 Alternatively, you can improve the approximation by reducing the $\epsilon$ variable in the tau-leaping parameters (\texttt{tl.params}) when calling \texttt{ssa.adaptivetau} (in the earlier example, $\epsilon$ takes its default value of 0.05):
 \begin{Schunk}
 \begin{Sinput}
-> simResults = ssa.adaptivetau(init.values = c(prey = 1000, pred = 1000),
+> simResults = ssa.adaptivetau(init.values = c(prey = 1000, pred = 500),
 +                              transitions, lvRates,
 +                              params = list(r=10, beta=0.01, delta=10),
-+                              tf=10,
++                              tf=12,
 +                              tl.params = list(epsilon = 0.005))
 \end{Sinput}
 \end{Schunk}
 
-Note we have explicitly linked the death of prey to growth in the predator population by placing these two actions in a single transition and incorporating the parameter $\alpha$ into the $\Delta_{2}$ vector. Alternatively, these actions could have been split into two independent transitions with state change vectors $[-1,0]$ and $[0,+1]$ and rates $\alpha X_{1}X_{2}$ and $\beta X_{1}X_{2}$. However, this formulation would yield slightly increased variance in the stochastic process since these actions are uncoupled.
+Note we have explicitly linked the death of prey to growth in the predator population by placing these two actions in a single transition and incorporating the parameter $\alpha$ into the $\Delta_{2}$ vector. Alternatively, these actions could have been split into two independent transitions with state change vectors $[-1,0]$ and $[0,+1]$ and rates $\alpha X_{1}X_{2}$ and $\beta X_{1}X_{2}$. This formulation would yield slightly increased variance in the stochastic process since these actions are uncoupled.
 
-With the parameters and initial conditions used in this example, the deterministic model predicts a steady state with $dX_{1}/dt=dX_{2}/dt=0$, while our stochastic trajectory has a dramatically different outcome with prey becoming extinct around time 45. If we repeat the simulation many times, we find the prey go extinct in approximately 1/3 of the simulations (followed shortly by extinction of the predator) while the predator become extinct in the other 2/3 of the simulations
+With the parameters and initial conditions used in this example, the deterministic model predicts a steady state with $dX_{1}/dt=dX_{2}/dt=0$, while our stochastic trajectory has a dramatically different outcome with prey becoming extinct around time 11. If we repeat the simulation many times, we find the prey go extinct in approximately 1/3 of the simulations (followed shortly by extinction of the predator) while the predator become extinct in the other 2/3 of the simulations
 (and prey grow infinitely, revealing a fundamental unrealistic aspect of this model).
 
 
 \section*{Example 2: genetic drift}
-Consider a Moran model for the evolution of a population of size $N$ in which we track the number of individuals with novel mutant allele ($X$) versus the ancestral allele ($N-X$).  Since the population size is a constant, this model has only one independent variable ($X$).  Under the Moran model, evolution occurs when one individual is chosen to reproduce and, simultaneously, one individual is chosen to die.  Thus the model allows only ``one-step'' transitions in which $X$ either decreases or increases by one ($\Delta_1=[-1]$ and $\Delta_2=[+1]$).  Both transitions occur at the same rate: $\lambda_1 = \lambda_2 = \frac{X}{N}\frac{N-X}{N}$.
+Consider a Moran model for the evolution of a population of size $N$ in which we track the number of individuals with a novel mutant allele ($X$) versus the number of individuals with the ancestral allele ($N-X$).  Since the population size is a constant, this model has only one independent variable ($X$).  Under the Moran model, evolution occurs when one individual is chosen to reproduce and, simultaneously, one individual is chosen to die.  Thus the model allows only ``one-step'' transitions in which $X$ either decreases or increases by one ($\Delta_1=[-1]$ and $\Delta_2=[+1]$).  Both transitions occur at the same rate: $\lambda_1 = \lambda_2 = \frac{X}{N}\frac{N-X}{N}$.
 
 Although this model has only one variable, we have two ``critical values'' for this variable: $X=0$ and $X=N$ are both absorbing boundaries.  The adaptive tau-leaping approximation is careful near the $X=0$ boundary, but it is unaware of other critical values.  We work around this problem by creating an additional variable for the ancestral allele, such that $X_2 = 0$ when $X_1 = N$.
 \begin{Schunk}
 \begin{Sinput}
 > library(adaptivetau)
-> transitions = cbind(c(-1,+1), # num individuals w/ allele X decreases
-+                     c(+1,-1)) # num individuals w/ allele X increases
+> transitions = cbind(c(-1,+1), # num individuals w/ derived allele decreases
++                     c(+1,-1)) # num individuals w/ derived allele increases
 > driftRateF <- function(x, params, t) {
 +   rep(x[1] * x[2]/sum(x)^2, 2)
 + }
 > r=ssa.adaptivetau(c(500,500), transitions, driftRateF, params=NULL, tf=Inf)
 \end{Sinput}
 \end{Schunk}
-Results are plotted in Figure \ref{fig-drift}.  The above code also demonstrates an alternative stopping condition for the simulation: when \texttt{tf=Inf}, the simulation will run until all transition rates are 0 (in this case, when one allele fixes in the population).
+Simulation results are plotted in Figure \ref{fig-drift}.  The above code also demonstrates an alternative stopping condition for the simulation: when \texttt{tf=Inf}, the simulation will run until all transition rates are 0 (in this case, when either allele fixes in the population).
 \begin{figure}
   \centerline{
 \includegraphics{adaptivetau-011}
@@ -162,7 +162,7 @@ Results are plotted in Figure \ref{fig-drift}.  The above code also demonstrates
 
 
 \section*{Example 3: epidemiology}
-We want to model the stuttering transmission of a infectious disease at the initial stages of its movement from a non-human animal reservoir to human populations.  Our model is a slight modification on the standard Kermack-McKendrick SIR compartment model with four states: susceptible ($S$), infected with non-human-adapted pathogen ($I_1$), infected with human-adapted pathogen ($I_2$), and recovered (this last class is also immune) ($R$).
+We want to model the stuttering transmission of an infectious disease in the initial stages of its movement from a non-human animal reservoir to a human population.  Our model is a slight modification on the standard Kermack-McKendrick SIR compartment model: susceptible ($S$), infected with non-human-adapted pathogen ($I_1$), infected with human-adapted pathogen ($I_2$), and recovered (this last class is also immune) ($R$).
 
 First, the differential equation representation:
 \[
@@ -173,9 +173,9 @@ First, the differential equation representation:
   dR/dt & = \gamma_1 I_1 + \gamma_2 I_2
 \end{split}
 \]
-where we assume transmissible contact with infected animals occurs at a constant rate $z$, human-to-human transmissible contact occurs with rates $\beta_{1,2}$, human adaptation occurs with rate $\mu$, death with rates $\delta_{1,2}$ and recovery with rates $\gamma_{1,2}$.
+where we assume transmissible contact with infected animals occurs at a constant rate $z$, human-to-human transmissible contact occurs with rates $\beta_{1,2}$, human adaptation occurs with rate $\mu$, death due to infection with rates $\delta_{1,2}$ and recovery with rates $\gamma_{1,2}$.
 
-Now we will make a stochastic version of this model in R.  Since this model has a few more variable than our earlier examples, we will demonstrate the use of the \texttt{ssa.maketran} helper function which makes it easier to create the transition matrix:
+Now we will make a stochastic version of this model in R.  Since this model has a few more variable than our earlier examples, we will use the \texttt{ssa.maketran} helper function which eases creation of the transition matrix:
 \begin{Schunk}
 \begin{Sinput}
 > init.values = c(
@@ -201,7 +201,7 @@ Now we will make a stochastic version of this model in R.  Since this model has 
 + }
 > params = list(zoonotic=1e-6, beta=c(1e-7, 1e-5), mu=0.1,
 +               delta=c(1e-2,1e-5), gamma=c(0.1, 0.1))
-> set.seed(3)
+> set.seed(3) # set random number generator seed to be reproducible
 > r=ssa.adaptivetau(init.values, transitions, SIRrateF, params, tf=1000)
 \end{Sinput}
 \end{Schunk}
