checking in old tweaks
git-svn-id: file:///home/pjohnson/repo/prj/sim_algos/adaptivetau@268 26082704-6efc-0310-a1c6-a466a319e90f

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+----------------------------
+Version 1.0-1 - 27 Sept 2012
+----------------------------
+  - Fixed validity check that aborts on non-integer initial conditions
+    (previously was being too permissive).
+  - removed .Rhistory file accidently left under /vignettes directory
+
 ------------------------
 Version 1.0 - 9 Apr 2012
 ------------------------
