--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,22 @@
 ----------------------------
+Version 2.0 - 4 Feb 2014
+----------------------------
+  - transition matrix ("nu") can now be specified with an
+    alternative data structure to reduce memory usage for large sparse
+    matrices
+  - new feature: transitions may be designated as "halting", which
+    will cause simulation to stop after executing one of these
+    transitions
+  - streamlined code for dealing with transition classification
+  - call PutRNGstate before calling user-supplied rate function.
+    While the rate function itself must not be stochastic, if a
+    unnecessary call to Get/PutRNGState were to occur (e.g., as done
+    by Rcpp at entry/exit to all exported functions), the adaptivetau
+    algorithm could get scrambled.  Adding this call covers this
+    situation at relatively low cost.
+  - fix vignette typo
+
+----------------------------
 Version 1.1-1 - 11 Nov 2013
 ----------------------------
   - Remove #include <cmath>, which appears (?) to have been
