--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 ----------------------------
-Version 2.0 - 4 Feb 2014
+Version 2.0 - 24 Mar 2014
 ----------------------------
   - transition matrix ("nu") can now be specified with an
     alternative data structure to reduce memory usage for large sparse
@@ -15,6 +15,10 @@ Version 2.0 - 4 Feb 2014
     algorithm could get scrambled.  Adding this call covers this
     situation at relatively low cost.
   - fix vignette typo
+  - bug fix: incorrect type allocation for R_NamesSymbol; thanks to
+    Brian Ripley for catching.
+  - handle case where final time ("tf" parameter) is an integer data
+    type; thanks to Sebastian Funk for sending a patch.
 
 ----------------------------
 Version 1.1-1 - 11 Nov 2013
