--- a/NEWS
+++ b/NEWS
@@ -5,8 +5,9 @@ Version 2.1 - 8 May 2014
     to ssa.adaptivetau (previously had ben using library(compile)).
     Previous behavior led to significant inefficiencies if
     ssa.adaptivetau was called multiple times with the same rate
-    function.  Instead, modify documentation to recommend that users
-    use enableJIT(1).
+    function; thanks to Sebastian Funk for raising this issue.
+    Instead, modify documentation to recommend that users use
+    enableJIT(1).
 
 ----------------------------
 Version 2.0 - 24 Mar 2014
